Name:                   string-combinators
Version:                0.1
Synopsis:               Polymorphic functions to build and combine stringlike values
Category:               Data
License:                BSD3
License-file:           LICENSE
Author:                 Bas van Dijk <v.dijk.bas@gmail.com>
Maintainer:             Bas van Dijk <v.dijk.bas@gmail.com>
Copyright:              2009 Bas van Dijk <v.dijk.bas@gmail.com>
Cabal-version:          >= 1.2
Build-Type:             Simple
Stability:              experimental

Flag Stringable
  Description: Include the Data.String.Stringable module

Library
  Build-Depends:        base
  Exposed-modules:      Data.String.Combinators

  if flag(Stringable)
    Build-Depends:      bytestring, dstring, text, pretty
    Exposed-modules:    Data.String.Stringable

  Ghc-options:          -O2 -Wall
